--- a/04-lists.ipynb
+++ b/04-lists.ipynb
@@ -474,7 +474,7 @@
    "source": [
     "print(name[0:10])\n",
     "print(name[11:])\n",
-    "print(chromosomes[0:3])\n",
+    "print(chromosomes[0:2])\n",
     "print(chromosomes[-1])"
    ]
   },
@@ -578,6 +578,10 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md",
+   "notebook_metadata_filter": "all"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
